--- a/full-and-partial-Dentures.html
+++ b/full-and-partial-Dentures.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>v-smilez Dental Care - Services|Kondapur,Hyderabard</title>
+    <title>v-Smilez Dental Care - Services|Kondapur,Hyderabad</title>
     <!-- google font -->
     <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -38,25 +38,8 @@
                              Complete dentures are used when all teeth are missing while Partial dentures are given, where some natural teeth remain.</p>
                     </div>
                     <div class="treatment-content">
-                        <!-- <p>
-
-                            Dentures can help you in increasing quality of life and help you maintain proper health by increasing your chewing efficiency eat food.</p>
-
-                            <p>Experience full mouth restoration with our expertly crafted complete dentures, providing a natural look and optimal functionality.</p>
-
-                            <p>Replace one or several missing teeth seamlessly with our customized partial denture solutions, enhancing both aesthetics and oral health.</p> -->
-
                             <p>At V-Smilez Dental Clinic, we provide the <span class="fw-bold text-capitalize">Full and Partial Dentures Services in Beeramguda</span> and  prioritize your comfort and satisfaction throughout your denture journey. Our experienced team provides comprehensive pre and post-operative care, ensuring that you are well informed and supported at every step of the process. We offer personalized guidance, meticulous fittings, and post-operative adjustments to ensure your dentures fit perfectly and give you the confidence to smile brightly.</p>
-                            <p>Finding a reputable <span class="fw-bold text-capitalize">full and partial dentures hospital in Beeramguda</span> can greatly enhance your oral health and confidence. Whether you need comprehensive denture services or partial solutions, choosing a specialized clinic ensures personalized care and expertise in denture fittings and adjustments. Such clinics typically offer a range of services, including consultations, fittings, and maintenance, tailored to meet individual dental needs. By selecting a clinic known for its quality of service and patient-centric approach, you can rest assured that your dental health is in capable hands, providing you with comfort and a natural smile.
-
-
-
-
-
-
-
-
-                            </p>
+                            <p>Finding a reputable <span class="fw-bold text-capitalize">full and partial dentures hospital in Beeramguda</span> can greatly enhance your oral health and confidence. Whether you need comprehensive denture services or partial solutions, choosing a specialized clinic ensures personalized care and expertise in denture fittings and adjustments. Such clinics typically offer a range of services, including consultations, fittings, and maintenance, tailored to meet individual dental needs. By selecting a clinic known for its quality of service and patient-centric approach, you can rest assured that your dental health is in capable hands, providing you with comfort and a natural smile. </p>
                         </div>
 
                 </div>
