--- a/habit-correction.html
+++ b/habit-correction.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>v-smilez Dental Care - Services|Kondapur,Hyderabard</title>
+    <title>v-Smilez Dental Care - Services|Kondapur,Hyderabad</title>
     <!-- google font -->
     <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -36,21 +36,10 @@
                     <div class="treatment-content">
                         <p>Finding a <span class="fw-bold text-capitalize">habit correction treatment in beeramguda</span>, clinic, or hospital is crucial for those seeking support to overcome challenging habits. Whether it's for substance abuse, behavioral addictions, or other habitual issues, these institutions offer specialized care and therapies tailored to individual needs. Such facilities often provide a range of services including counseling, detoxification programs, behavioral therapy, and ongoing support to help individuals break free from harmful habits and lead healthier lives. Seeking help from a <span class="fw-bold text-capitalize">habit correction clinic in Beeramguda</span> can be a significant step towards achieving long-term recovery and well-being.</p>
                     </div>
-                    <!-- <div class="treatment-content">
-                        <p>Many Kid's suffer from deleterious oral habit of Thumb sucking Mouth Breathing which can have a very bad effect on erupting dentition of your kids Also Bruxism or continuous grinding of teeth can also have a bad effect on ones teeth.</p>
-                    </div> -->
                     <div class="treatment-content">
                         <p>
 
-                            
-                        If you're seeking professional help for <span class="fw-bold text-capitalize">habit correction in beeramguda</span>, it's essential to find a reputable hospital or doctor specializing in this field. Choosing the <span class="fw-bold text-capitalize">best habit correction doctor in Beeramguda</span> involves considering their experience, reputation, and patient reviews. It's crucial to select a healthcare provider who offers personalized treatment plans tailored to your specific needs, whether you're addressing substance abuse, behavioral issues, or other habits affecting your well-being. By consulting with a qualified specialist in <span class="fw-bold text-capitalize">habit correction hospital in Beeramguda</span>, you can take proactive steps towards positive change and improved health.                    </div>
-                    <!-- <div class="treatment-content">
-                        <p>
-
-                            
-                            Many Kid'At Devansh Radiology & Imaging Clinic we help your child from stopping these habits and regaining the damage caused by these habits.</p>
-                    </div> -->
-
+                        If you're seeking professional help for <span class="fw-bold text-capitalize">habit correction in beeramguda</span>, it's essential to find a reputable hospital or doctor specializing in this field. Choosing the <span class="fw-bold text-capitalize">best habit correction doctor in Beeramguda</span> involves considering their experience, reputation, and patient reviews. It's crucial to select a healthcare provider who offers personalized treatment plans tailored to your specific needs, whether you're addressing substance abuse, behavioral issues, or other habits affecting your well-being. By consulting with a qualified specialist in <span class="fw-bold text-capitalize">habit correction hospital in Beeramguda</span>, you can take proactive steps towards positive change and improved health.</div>
                 </div>
                 <div class="col-lg-4 pe-xl-5">
                     <h3 class="title-style mb-3 list-heading">TREATMENTS</h3>
