--- a/management-of-dental-traumatic-Injuries.html
+++ b/management-of-dental-traumatic-Injuries.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>v-smilez Dental Care - Services|Kondapur,Hyderabard</title>
+    <title>v-Smilez Dental Care - Services|Kondapur,Hyderabad</title>
     <!-- google font -->
     <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -37,27 +37,9 @@
                     <p>If you're seeking expert<span class="fw-bold text-capitalize"> management of dental traumatic injuries in Beeramguda</span>, you can find several specialized facilities equipped to handle various types of dental trauma. Whether you need immediate <span class="fw-bold text-capitalize">traumatic dental injury treatment in Beeramguda</span> or you're looking for a hospital dedicated to such emergencies, Beeramguda offers several options. These hospitals and clinics are staffed with experienced dental professionals who are well-versed in the latest techniques and treatments for managing traumatic dental injuries. From initial assessment to comprehensive treatment plans, the dental care facilities in Beeramguda ensure you receive the highest standard of care to restore your dental health. The <span class="fw-bold text-capitalize">Traumatic Dental Injury Hospital in Beeramguda</span> specializes in providing comprehensive care and treatment for dental trauma cases.
                     </p>    
                     </div>
-                    <!-- <div class="treatment-content">
-                        <p>Accidents happen anytime, and knowing what to do when one occurs can mean the difference between saving and losing a tooth.
-
-                            For all dental emergencies, it is important to visit dentist as soon as possible.</p>
-                    </div> -->
                     <div class="treatment-content">
-                        <!-- <p>
-
-                            Some tips for common dental emergencies:
-1.For a knocked out permanent tooth, keep it moist at all times, either by placing the teeth between cheek and gums, or in milk. Visit your dentist office as soon as possible.
-2.For cracked tooth, immediately rinse mouth with warm water to clean the area. Put cold compresses on the face to keep any swelling down.
-3.For lip injury, clean the area gently with water and cold compresses.
-4.If you encounter with any Dental Related emergency then contact us immediately</p> -->
 
                             <p>If you're looking for the best <span class="fw-bold text-capitalize">traumatic dental injury clinic in Beeramguda</span>, you'll find top-notch care and specialized treatment options to address your needs. The <span class="fw-bold text-capitalize">best traumatic dental injury doctors in Beeramguda</span> are highly skilled and experienced in managing various dental traumas, ensuring that you receive the best possible care. Whether you're dealing with a cracked tooth, knocked-out teeth, or any other dental emergency, the clinics in Beeramguda are equipped with advanced technology and a compassionate approach to restore your dental health and bring back your confident smile.
-
-
-
-
-
-
                             </p>
                     </div>
 
