--- a/teeth-cleaning-scaling-and-polishing.html
+++ b/teeth-cleaning-scaling-and-polishing.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>v-smilez Dental Care - Services|Kondapur,Hyderabard</title>
+    <title>v-Smilez Dental Care - Services|Kondapur,Hyderabad</title>
     <!-- google font -->
     <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -47,12 +47,6 @@
                              with latest equipment's with highest level of sterilization to give our patients a good oral Health. <span class="fw-bold text-capitalize">Tooth cleaning (scaling) and polishing treatments in Beeramguda</span> ensure thorough removal of plaque and stains, promoting a brighter smile and healthier gums.
                             </p>
                              <p>If you're looking for tooth cleaning (scaling) and polishing services in Beeramguda, you have several options to consider. Beeramguda offers several hospitals and clinics where you can receive these treatments from experienced professionals. Whether you're seeking routine dental maintenance or specialized care, the <span class="fw-bold text-capitalize">best tooth cleaning (scaling) and polishing doctors in Beeramguda</span> are equipped to provide thorough and effective treatments. These clinics and hospitals prioritize dental hygiene and offer modern facilities to ensure your dental health is in good hands. Whether it's for regular check-ups or specific dental issues, Beramguda's dental professionals are committed to providing top-notch care tailored to your needs.
-
-
-
-
-
-
                              </p>
                     </div>
 
