--- a/tmj-disorder-treatment.html
+++ b/tmj-disorder-treatment.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>v-smilez Dental Care - Services|Kondapur,Hyderabard</title>
+    <title>v-Smilez Dental Care - Services|Kondapur,Hyderabad</title>
     <!-- google font -->
     <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -40,11 +40,6 @@
                         <p>
 
                             If you're looking for specialized care for <span class="fw-bold text-capitalize">TMJ disorder hospital in Beeramguda</span>, there are several clinics and hospitals that offer comprehensive treatment options. These facilities are equipped with state-of-the-art technology and staffed by experienced doctors who specialize in TMJ disorders. Whether you're seeking consultation, diagnosis, or treatment, these clinics provide a range of services tailored to address your needs. The <span class="fw-bold text-capitalize">best TMJ disorder doctors in Beeramguda</span> are known for their expertise in managing jaw pain, stiffness, and related symptoms, ensuring personalized care to improve your quality of life.                    </div>
-                    <!-- <div class="treatment-content">
-                        <p>
-
-                            Treatment options range from self-care practices like applying ice packs and practicing relaxation techniques to more advanced interventions such as dental splints, physical therapy, or in severe cases, surgery. Seeking professional evaluation and treatment is essential for managing TMJ disorder and improving quality of life.</p>
-                    </div> -->
 
                 </div>
                 <div class="col-lg-4 pe-xl-5">
