--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                     <div class="team-block-single">
                         <div class="team-grids">
                             <a href="#team-single">
-                                <img src="/assets/images/doc-1 (1).png" class="img-fluid" alt="">
+                                <img src="assets/images/doc-1 (1).png" class="img-fluid" alt="">
 
                             </a>
                         </div>
@@ -494,7 +494,7 @@
                     <div class="team-block-single">
                         <div class="team-grids">
                             <a href="#team-single">
-                                <img src="/assets/images/doc-1 (2).png" class="img-fluid" alt="">
+                                <img src="assets/images/doc-1 (2).png" class="img-fluid" alt="">
 
                             </a>
                         </div>
