--- a/about.html
+++ b/about.html
@@ -332,7 +332,7 @@
                     <div class="team-block-single">
                         <div class="team-grids">
                             <a href="#team-single">
-                                <img src="/assets/images/doc-1 (1).png" class="img-fluid" alt="">
+                                <img src="assets/images/doc-1 (1).png" class="img-fluid" alt="">
 
                             </a>
                         </div>
@@ -346,7 +346,7 @@
                     <div class="team-block-single">
                         <div class="team-grids">
                             <a href="#team-single">
-                                <img src="/assets/images/doc-1 (3).png" class="img-fluid" alt="">
+                                <img src="assets/images/doc-1 (3).png" class="img-fluid" alt="">
 
                             </a>
                         </div>
@@ -458,7 +458,7 @@
                     <div class="team-block-single">
                         <div class="team-grids">
                             <a href="#team-single">
-                                <img src="/assets/images/doc-1 (8).png" class="img-fluid" alt="">
+                                <img src="assets/images/doc-1 (8).png" class="img-fluid" alt="">
 
                             </a>
                         </div>
@@ -472,7 +472,7 @@
                     <div class="team-block-single">
                         <div class="team-grids">
                             <a href="#team-single">
-                                <img src="/assets/images/lady doctor111.png" class="img-fluid" alt="">
+                                <img src="assets/images/lady doctor111.png" class="img-fluid" alt="">
 
                             </a>
                         </div>
