--- a/gallery.html
+++ b/gallery.html
@@ -188,61 +188,61 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="bg-clr-white hover-box">
-                        <div class="row align-items-center" style="margin-left: unset;">
-                            <div class="col-sm-4 g">
+                        <div class="row align-items-center" style="margin-left: unset; display: flex; justify-content: center;">
+                            <div class="col-sm-4 col-lg-4 g">
 
                                 <img src="./assets/images/celebrity.png" alt="" />
                             </div>
-                            <div class="col-sm-4 g">
+                            <div class="col-sm-4 col-lg-4 g">
 
                                 <img src="./assets/images/interior-modern-equipped-dental-office-with-x-ray-monitors-dentist-stomatology-orthodontic-workplace.png"
                                     alt="" />
 
                             </div>
-                            <div class="col-sm-4 g">
+                            <div class="col-sm-4 col-lg-4 g">
                                 <img src="./assets/images/kids-area.png" alt="" />
                             </div>
-                            <div class="col-sm-4 g">
+                            <div class="col-sm-4 col-lg-4 g">
 
                                 <img src="./assets/images/laser-treatment.png" alt="" />
 
                             </div>
-                            <div class="col-sm-4 g">
+                            <div class="col-sm-4 col-lg-4 g">
 
                                 <img src="./assets/images/doc-1 (1).png" alt="" />
 
                             </div>
-                            <div class="col-sm-4 g">
+                            <div class="col-sm-4 col-lg-4 g">
 
                                 <img src="./assets/images/high-seriliazation.png" alt="" />
 
                             </div>
-                            <div class="col-sm-4 g">
+                            <div class="col-sm-4 col-lg-4 g">
 
                                 <img src="./assets/images/reception.png" alt="" />
 
                             </div>
-                            <div class="col-sm-4 g">
+                            <div class="col-sm-4 col-lg-4 g">
 
                                 <img src="./assets/images/OPC.png" alt="" />
 
                             </div>
-                            <div class="col-sm-4 g">
+                            <div class="col-sm-4 col-lg-4 g">
 
                                 <img src="./assets/images/treatment-area.png" alt="" />
 
                             </div>
-                            <div class="col-sm-4 g">
+                            <div class="col-sm-4 col-lg-4 g">
 
                                 <img src="./assets/images/vsmile1.png" alt="" />
 
                             </div>
-                            <div class="col-sm-4 g">
+                            <div class="col-sm-4 col-lg-4 g">
 
                                 <img src="./assets/images/vsmile3.png" alt="" />
 
                             </div>
-                            <div class="col-sm-4 g">
+                            <div class="col-sm-4 col-lg-4 g">
 
                                 <img src="./assets/images/vsmile4.png" alt="" />
 
